# algorithmic-arts

./: API_DOCUMENTATION.md  BACKEND_AUDIT_REPORT.md  COMPLIANCE_152FZ.md  DEPLOYMENT.md  GETTING_STARTED.md  PROMPTS_1_2_ENHANCED.md  PROMPTS_3_4_ENHANCED.md  PROMPTS_5_6_ENHANCED.md  PROMPTS_FOR_QWEN.md  PROMPT_7_ENHANCED.md  PROMT_8_ENHANCED.md  QWEN.md  README.md  ROADMAP.md  SUMMARY.md
frontend/: .gitignore  proxy.ts  (+11 more)
platform/services/ai-core-service/: Dockerfile  pyproject.toml  schema.sql
platform/services/ai-core-service/alembic/: env.py
platform/services/ai-core-service/alembic/versions/: 2b3c4d5e6f7a_initial_ai_core_service_schema.py
platform/services/ai-core-service/src/: config.py  dependencies.py  main.py
platform/services/ai-core-service/src/agents/: analyzer_agent.py  base_agent.py  enricher_agent.py  orchestrator.py  predictor_agent.py  scout_agent.py  writer_agent.py
platform/services/ai-core-service/src/embeddings/: embedding_service.py  models.py
platform/services/ai-core-service/src/kafka/: consumers.py
platform/services/ai-core-service/src/llm/: prompt_manager.py  router.py
platform/services/ai-core-service/src/metrics/: prometheus.py
platform/services/ai-core-service/src/models/: __init__.py  ai.py  ai_analysis.py  ai_chat_message.py  ai_chat_session.py  ai_embedding.py  ai_model.py  ai_prompt.py  base.py
platform/services/ai-core-service/src/rag/: pipeline.py  reranker.py  retriever.py
platform/services/ai-core-service/src/repositories/: ai_repository.py
platform/services/ai-core-service/src/routers/: ai.py
platform/services/ai-core-service/src/schemas/: ai.py
platform/services/ai-core-service/src/services/: ai_service.py
platform/services/ai-core-service/src/tasks/: celery_app.py  embedding.py  enrichment.py  scouting.py
platform/services/api-gateway/: Dockerfile  pyproject.toml
platform/services/api-gateway/src/: api.py  main.py
platform/services/auth-service/: Dockerfile  mypy.ini  pyproject.toml  schema.sql
platform/services/auth-service/alembic/: alembic.ini  env.py
platform/services/auth-service/alembic/versions/: initial_auth_schema.py
platform/services/auth-service/src/: api.py  config.py  dependencies.py  main.py
platform/services/auth-service/src/core/: __init__.py  exceptions.py  rate_limiter.py  security.py
platform/services/auth-service/src/models/: __init__.py  base.py  oauth_connection.py  permission.py  role.py  role_permission.py  session.py  user.py  user_role.py
platform/services/auth-service/src/repositories/: user_repository.py
platform/services/auth-service/src/routers/: auth.py
platform/services/auth-service/src/schemas/: __init__.py  auth.py  user.py
platform/services/auth-service/src/services/: __init__.py  auth_service.py  jwt_service.py  oauth_service.py
platform/services/auth-service/tests/integration/: test_auth_integration.py
platform/services/auth-service/tests/unit/: test_auth_service.py
platform/services/company-service/: Dockerfile  pyproject.toml  schema.sql
platform/services/company-service/alembic/: alembic.ini  env.py
platform/services/company-service/alembic/versions/: 0003_create_partitioned_tables.py  initial_company_schema.py
platform/services/company-service/src/: config.py  main.py
platform/services/company-service/src/application/: __init__.py
platform/services/company-service/src/domain/: __init__.py  company.py  events.py  exceptions.py  value_objects.py
platform/services/company-service/src/infrastructure/: __init__.py  base.py  models.py
platform/services/company-service/src/models/: __init__.py  base.py  company.py  company_metric.py  company_update.py
platform/services/company-service/src/presentation/: __init__.py
platform/services/company-service/src/scripts/: entrypoint.sh  start_projection_worker.py
platform/services/company-service/tests/integration/: conftest.py  test_partitioned_tables.py  test_projection_worker.py
platform/services/company-service/tests/unit/: conftest.py  test_commands.py  test_company_domain.py  test_queries.py
platform/services/crm-hub/: Dockerfile  pyproject.toml  schema.sql
platform/services/crm-hub/alembic/: env.py
platform/services/crm-hub/alembic/versions/: initial_crm_schema.py
platform/services/crm-hub/src/: config.py  main.py
platform/services/crm-hub/src/adapters/: amocrm.py  base.py  bitrix24.py  hubspot.py  megaplan.py  pipedrive.py  salesforce.py
platform/services/crm-hub/src/crypto/: token_vault.py
platform/services/crm-hub/src/kafka/: consumers.py
platform/services/crm-hub/src/models/: __init__.py  crm_connection.py  crm_sync_log.py  orm.py  schemas.py
platform/services/crm-hub/src/routers/: crm.py
platform/services/crm-hub/src/sync/: audit_log.py  conflict_resolver.py  field_mapper.py  sync_service.py
platform/services/crm-hub/src/tasks/: celery_app.py  sync_tasks.py
platform/services/crm-hub/src/webhooks/: handlers.py  router.py  verifier.py
platform/services/data-pipeline/: Dockerfile  pyproject.toml  schema.sql
platform/services/data-pipeline/alembic/versions/: 3c4d5e6f7a8b_initial_data_pipeline_service_schema.py
platform/services/data-pipeline/src/: config.py  main.py
platform/services/data-pipeline/src/kafka/: consumers.py
platform/services/data-pipeline/src/load/: db_loader.py  es_indexer.py  kafka_producer.py
platform/services/data-pipeline/src/monitoring/: metrics.py
platform/services/data-pipeline/src/scrapers/: base_scraper.py  crunchbase.py  egrul.py  habr_career.py  rusbase.py  vc_ru.py
platform/services/data-pipeline/src/tasks/: celery_app.py  process_tasks.py  scrape_tasks.py
platform/services/data-pipeline/src/transform/: deduplicator.py  funding_parser.py  industry_classifier.py  ner_extractor.py  normalizer.py  tech_extractor.py
platform/services/partner-service/: Dockerfile  pyproject.toml  schema.sql
platform/services/partner-service/alembic/: env.py
platform/services/partner-service/alembic/versions/: initial_partner_schema.py  initial_partnership_schema.py
platform/services/partner-service/src/: dependencies.py  main.py
(+184 files in other folders)
