[tool.poetry]
name = "ai-core-service"
version = "1.0.0"
description = "AI Core Service for ALGORITHMIC ARTS platform"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
sqlalchemy = "^2.0.0"
sqlalchemy-asyncio = "^2.0.0"
asyncpg = "^0.29.0"
redis = "^5.0.1"
aiokafka = "^0.10.0"
celery = "^5.4.0"
prometheus-client = "^0.20.0"
structlog = "^24.0.0"
httpx = "^0.27.0"
rank-bm25 = "^0.2.2"
sentence-transformers = "^3.0.0"
langchain = "^0.3.0"
langgraph = "^0.2.0"
pydantic = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"