[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = "API Gateway for ALGORITHMIC ARTS platform"
authors = ["ALGORITHMIC ARTS <dev@algorithmic-arts.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
pydantic = "^2.7.0"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
redis = "^5.0.1"
kafka-python = "^2.0.2"
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-exporter-jaeger = "^1.24.0"
opentelemetry-instrumentation-fastapi = "^0.45.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
mypy = "^1.9.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"