[tool.poetry]
name = "company-service"
version = "1.0.0"
description = "Company management service for ALGORITHMIC ARTS platform"
authors = ["Alex <alex@algorithmic-arts.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pydantic = {extras = ["email"], version = "^2.10.0"}
pydantic-settings = "^2.6.0"
redis = {extras = ["hiredis"], version = "^5.2.0"}
aiokafka = "^0.11.0"
structlog = "^24.4.0"
prometheus-fastapi-instrumentator = "^7.0.0"
slowapi = "^0.1.9"
pgvector = "^0.3.0"
elasticsearch = "^8.12.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
factory-boy = "^3.3.0"
faker = "^33.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"