[tool.poetry]
name = "data-pipeline-service"
version = "1.0.0"
description = "Data Pipeline Service for ALGORITHMIC ARTS platform"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
sqlalchemy = "^2.0.0"
sqlalchemy-asyncio = "^2.0.0"
asyncpg = "^0.29.0"
redis = "^5.0.1"
aiokafka = "^0.10.0"
celery = "^5.4.0"
prometheus-client = "^0.20.0"
structlog = "^24.0.0"
httpx = "^0.27.0"
spacy = "^3.7.0"
ru-core-news-sm = "^3.7.0"
rapidfuzz = "^3.0.0"
elasticsearch = "^8.14.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"